# gh-ac

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  manifest.yml  package.json
.github/workflows/: go.yml  release.yml  rust.yml  workflow_dispatch.yml
cmd/: root.go
cmd/cleanup/: cleanup.go
cmd/config/: config.go
cmd/dispatch/: dispatch.go
cmd/force/: force.go
cmd/push/: push.go
config/: config.go
gh/: gh.go
git/: git.go
golang/: main.go
golang/cmd/: root.go
golang/cmd/force/: force.go
golang/cmd/push/: push.go
golang/config/: config.go
golang/gh/: gh.go
golang/git/: git.go
golang/utils/: utils.go
script/: build.sh
src/: gh.rs  git.rs  github.rs  main.rs
utils/: utils.go
