[package]
name = "gh-ac"
version = "1.0.0"
description = "fire off github actions and open the lastest action run in browser"
author = "Shawn Yu"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.2", features = ["derive", "cargo"] }
# clap-verbosity-flag = "2.0.1"
# cli-log = "2.0.0"
confy = { version = "0.5.1", features = ["yaml_conf"], default-features = false }
dialoguer = { version = "0.10.4", features = ["fuzzy-select"] }
env_logger = "0.10.0"
git2 = "0.17.2"
log = "0.4.18"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.96"
spinners = "4.1.0"

# [build-dependencies]
# clap_complete = "4.3.1"
# # clap = "*"
# clap = { version = "4.3.2", features = ["derive"] }
