[package]
name = "gh-ac"
version = "1.2.3"
description = "fire off github actions and open the lastest action run in browser"
author = "Shawn Yu"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
env_logger = "0.10.0"
log = "0.4.18"
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.96"
spinners = "4.1.0"

  [dependencies.clap]
  version = "4.3.2"
  features = [ "derive", "cargo" ]

  [dependencies.confy]
  version = "0.5.1"
  features = [ "yaml_conf" ]
  default-features = false

  [dependencies.dialoguer]
  version = "0.10.4"
  features = [ "fuzzy-select" ]
